--- a/ShameBoard/index.html
+++ b/ShameBoard/index.html
@@ -17,6 +17,9 @@
 <! head ends and body starts>
 
 <body>
+	<!Header>
+	<h1>Board of Shame</h1>
+	
 	<! different div to list the personsfor the day, week and month >
 	<div class="wrapper">
 		<div class="boardOfShame_section">
